--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,3 +15,40 @@ body {
 #main-intro {
   padding-top: 10%;
 }
+
+#sub-nav {
+  font-size: 20px;
+}
+
+#sub-nav a {
+  color: #ef946c;
+}
+
+/* Sticky Footer Styles */
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+/* Custom page CSS
+  -------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+.container {
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+}
