--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,54 +1,110 @@
+/* ----------------------------------------------- */
+/* General */
+
 body {
   background-color: #f6f6f6;
   font-family: "Open Sans", sans-serif;
 }
 
-#main-intro {
-  font-family: "Lora", serif;
-  font-size: 30px;
+body * {
+  /* border: solid 1px grey; */
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.section-container {
+  padding: 10vw;
+}
+
+.yellow {
+  background-color: #ffb86f;
+}
+
+.blue {
+  background-color: #2e4052;
+}
+
+.blue * {
+  color: #f6f6f6 !important;
+}
+
+/* ----------------------------------------------- */
+/* Main Navbar */
+
+#main-navbar {
+  background-color: #f6f6f6;
 }
 
 #main-navbar li {
   padding-right: 30px;
 }
 
+#main-navbar a {
+  transition: color 400ms;
+}
+
+#main-navbar a:hover {
+  color: #ef946c;
+}
+
+/* Hide Navbar */
+#main-navbar.navbar {
+  opacity: 0.95;
+  transition: opacity 0.5s ease;
+  transition: top 0.5s ease;
+  margin-top: 0px;
+}
+
+#main-navbar.navbar-hide {
+  pointer-events: none;
+  opacity: 0;
+  margin-top: -80px; /* keeps nav hidden and home container exactly full page */
+}
+
+/* ----------------------------------------------- */
+/* Home */
+
+#home-container {
+  height: 100vh;
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+}
+
 #main-intro {
-  padding-top: 10%;
+  font-family: "Lora", serif;
+  font-size: 30px;
+  color: #2e4052;
+  padding-top: 20%;
 }
 
 #sub-nav {
-  font-size: 20px;
+  font-size: 17px;
+  font-family: "Open sans", sans-serif;
 }
 
 #sub-nav a {
   color: #ef946c;
+  transition: color 400ms;
 }
 
-/* Sticky Footer Styles */
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+#sub-nav a:hover {
+  color: #ad0202;
 }
-body {
-  margin-bottom: 60px; /* Margin bottom by footer height */
-}
-.footer {
+
+/* ----------------------------------------------- */
+/* Footer */
+/* Need to make responsive! */
+
+#social-nav {
   position: absolute;
   bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
 }
 
-/* Custom page CSS
-  -------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-.container {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
+#credit {
+  opacity: 0.5;
+  font-size: 10px;
+  font-family: "Open Sans", sans-serif;
 }
